git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1477 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/modalbox/logoperadores/formaLogOperadores.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/logoperadores/formaLogOperadores.css
@@ -151,3 +151,11 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	border-color:transparent; 
 	background:transparent;
 }
+
+.gral input{
+	height:15px;
+}
+
+.gral select{
+	height:17px;
+}
