--- a/erp-quimicos/src/main/webapp/css/modalbox/logvehiculos/formaLogVehiculos.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/logvehiculos/formaLogVehiculos.css
@@ -93,12 +93,11 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     font-size: 1em; 
 }
 
-
 .logvehiculos_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:370px;
-        height:210px;
+	width:770px;
+	height:330px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -106,11 +105,10 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	box-shadow: 3px 5px 10px -3px;
 }
 
-
 .logvehiculos_div_two{
 	/*font-family:tahoma;*/
-    width:370px;
-    height:28px;
+    width:770px;
+    /*height:28px;*/
     background-color:#454442;
 	margin-top:0;
     color:white;
@@ -124,7 +122,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .logvehiculos_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:359px;
+    /*width:359px;*/
     /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
@@ -132,7 +130,6 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	margin-left:10px;
 	margin-bottom:10px;
 }
-
 
 #grid_productos td{
 	height:18px;
@@ -150,4 +147,12 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .borde_oculto{
 	border-color:transparent; 
 	background:transparent;
+}
+
+.gral input{
+	height:15px;
+}
+
+.gral select{
+	height:17px;
 }
