--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -493,7 +493,7 @@
 												<ul>
 													<li class="topline"><a href="../logasignarutas/startup.agnux">Asignaci&oacute;n</a></li>
 													
-													<li class="topline"><a href="../invcargadoc/startup.agnux">Carga de Documentos</a></li>
+													<li class="topline"><a href="../logcargadoc/startup.agnux">Carga de Documentos</a></li>
 													<li class="topline"><a href="../logadmviaje/startup.agnux">Viajes</a></li>
 												</ul>
 											</li>
