git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1490 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -523,6 +523,10 @@
 											</li>
 											
 											<li>
+												<a href="../ctbpar/startup.agnux">Configuraci&oacute;n</a>
+											</li>
+											
+											<li>
 												<a href="#" class="sub">Reportes &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../ctbrepauxcta/startup.agnux">Auxiliar de Cuentas</a></li>
