git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1496 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -485,6 +485,7 @@
 												<ul>
 													<li><a href="../logvehiculos/startup.agnux">Unidades</a></li>
 													<li><a href="../logoperadores/startup.agnux">Operadores</a></li>
+													<li><a href="../logservadic/startup.agnux">Servicios Adicionales</a></li>
 												</ul>
 											</li>
 
