--- a/erp-quimicos/src/main/webapp/vm/productos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/productos/startup.vm
@@ -46,17 +46,17 @@
 				<td colspan="17">&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
-				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td>C&oacute;digo</td>
-				<td width=10>&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;</td>
 				<td><input type="text" name="sku_busqueda" style="width:100px;"></td>
-				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td >Descripci&oacute;n</td>
-				<td width=10>&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;</td>
 				<td><input type="text" name="descripcion" style="width:200px;"></td>
-				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td >Tipo</td>
-				<td width=10>&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;</td>
 				<td>
 					<select name="tipo_productos" style="width:120px;">
 						<option value="0" selected="yes">[-- --]</option>
@@ -64,9 +64,9 @@
 				</td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><input type="button" value="Buscar"></td>
-				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><input type="button" value="Limpiar"></td>
-				<td width=10>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			</tr>
 		</table>
 		
