--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -474,9 +474,9 @@
 											-->
 										</ul>
 									</li>
-
-
-
+									
+									
+									
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible">Rutas &raquo;</a>
 										<ul>
@@ -486,16 +486,22 @@
 													<li><a href="../logvehiculos/startup.agnux">Unidades</a></li>
 													<li><a href="../logoperadores/startup.agnux">Operadores</a></li>
 													<li><a href="../logservadic/startup.agnux">Servicios Adicionales</a></li>
+													<li><a href="../logvehiculotipounidades/startup.agnux">Tipo de Unidades</a></li>
+													<li><a href="../logvehiculomarca/startup.agnux">Marca</a></li>
+													<li><a href="../logvehiculotiporodada/startup.agnux">Tipo Rodada</a></li>
+													<li><a href="../logvehiculotipocaja/startup.agnux">Tipo Caja</a></li>
 												</ul>
 											</li>
-
+											
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../logasignarutas/startup.agnux">Asignaci&oacute;n</a></li>
 													
-													<li class="topline"><a href="../logcargadoc/startup.agnux">Carga de Documentos</a></li>
+													
 													<li class="topline"><a href="../logadmviaje/startup.agnux">Viajes</a></li>
+													<li class="topline"><a href="../logcargadoc/startup.agnux">Carga de Documentos</a></li>
+													<li class="topline"><a href="../logregcarga/startup.agnux">Registro de Cargas</a></li>
 												</ul>
 											</li>
 										</ul>
