git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1503 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
+++ b/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
@@ -252,3 +252,17 @@
     height:16px;
 }
 
+
+.onmouseOutEditar {
+	background-image: url(../../../img/editar.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:15px;
+}
+
+.onmouseOverEditar {
+	background-image: url(../../../img/editar1.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:15px;
+}
