--- a/erp-quimicos/src/main/webapp/css/modalbox/logvehiculotiporodada/formaLogVehiculoTipoRodada.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/logvehiculotiporodada/formaLogVehiculoTipoRodada.css
@@ -1,4 +1,4 @@
-#forma-clientsdest-overlay {
+#forma-logvehiculotiporodada-overlay {
 	position: fixed;
 	z-index:100;
 	top: 0px;
@@ -8,29 +8,29 @@
 /*background: #000;*/
 	display: none;
 }
-#forma-clientsdest-window {
+#forma-logvehiculotiporodada-window {
 	position: fixed;
 	z-index: 101;
 	/*display:block;*/
 	top:50%;
 	left:50%;
 	height:0px;
-	width:0px;
+	width:0x;
 	background: white;
 }
 
-#forma-clientsdest-window li {
+#forma-logvehiculotiporodada-window li {
 	list-style-type: none !important;
 }
 
-#forma-clientsdest-window div.tabulador{
+#forma-logvehiculotiporodada-window div.tabulador{
 	font-family: Arial, Verdana, sans-serif;
 	font-size: 11px;
 	padding: 4px 4px 4px 10px;
 	
 }
 
-#forma-clientsdest-window li {
+#forma-logvehiculotiporodada-window li {
 	list-style-type: none !important;
 }
 
@@ -94,12 +94,11 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 }
 
 
-
-.clientsdest_div_one{
+.logvehiculotiporodada_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:810px;
-    height:380px;
+	width:520px;
+    height:190px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -108,10 +107,9 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 }
 
 
-.clientsdest_div_two{
+.logvehiculotiporodada_div_two{
 	/*font-family:tahoma;*/
-/*    width:670px;*/
-	width:810px;
+    width:520px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -123,20 +121,18 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	z-index:1;	
 }
 
-.clientsdest_div_three{
+.logvehiculotiporodada_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    /*width:659px;*/
-    width:800px;
-    
-    /*height:298px;
-    height:260px;*/
+    width:509px;
+    /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
 	margin-right:10px;
 	margin-left:10px;
 	margin-bottom:10px;
 }
+
 
 #grid_productos td{
 	height:18px;
@@ -154,12 +150,4 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .borde_oculto{
 	border-color:transparent; 
 	background:transparent;
-}
-
-.gral input{
-	height:15px;
-}
-
-.gral select{
-	height:17px;
 }
